Fix auth flow and connect frontend to Render backend